# ollama-router

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  secrets-scan.yml
app/: main.py
